# vcoin09

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
contrib/seeds/: makeseeds.py
share/: setup.nsi.in
src/: Makefile.am  bignum.h  bitcoin-cli.cpp  bitcoind.cpp  chainparams.cpp  checkpoints.cpp  core.h  crypter.cpp  init.cpp  key.cpp  main.cpp  main.h  miner.cpp  net.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcrawtransaction.cpp  rpcserver.cpp  rpcwallet.cpp  txdb.cpp  txdb.h  util.cpp  version.cpp
src/m4/: bitcoin_qt.m4
src/qt/: Makefile.am  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  blockbrowser.cpp  blockexplorer.cpp  blockexplorer.h  chatwindow.cpp  chatwindow.h  clientmodel.cpp  editaddressdialog.cpp  exchangebrowser.cpp  exchangebrowser.h  guiconstants.h  guiutil.cpp  intro.cpp  miningpage.cpp  miningpage.h  openuridialog.cpp  overviewpage.cpp  overviewpage.h  paymentrequestplus.cpp  paymentrequestplus.h  paymentserver.cpp  qcustomplot.h  rpcconsole.cpp  sendcoinsdialog.cpp  signverifymessagedialog.cpp  splashscreen.cpp  tradingdialog.cpp  tradingdialog.h  utilitydialog.cpp  walletframe.cpp  walletframe.h  walletview.cpp  (+1 more)
src/qt/forms/: aboutdialog.ui  blockbrowser.ui  chatwindow.ui  coincontroldialog.ui  exchangebrowser.ui  helpmessagedialog.ui  miningpage.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  tradingdialog.ui
src/qt/locale/: vcoin_ach.ts  vcoin_af_ZA.ts  vcoin_ar.ts  vcoin_be_BY.ts  vcoin_bg.ts  vcoin_bs.ts  vcoin_ca.ts  vcoin_ca@valencia.ts  vcoin_ca_ES.ts  vcoin_cmn.ts  vcoin_cs.ts  vcoin_cy.ts  vcoin_da.ts  vcoin_de.ts  vcoin_el_GR.ts  vcoin_en.ts  vcoin_eo.ts  vcoin_es.ts  vcoin_es_CL.ts  vcoin_es_DO.ts  vcoin_es_MX.ts  vcoin_es_UY.ts  vcoin_et.ts  vcoin_eu_ES.ts  vcoin_fa.ts  vcoin_fa_IR.ts  vcoin_fi.ts  vcoin_fr.ts  vcoin_fr_CA.ts  vcoin_gl.ts  vcoin_gu_IN.ts  vcoin_he.ts  vcoin_hi_IN.ts  vcoin_hr.ts  vcoin_hu.ts  vcoin_id_ID.ts  vcoin_it.ts  vcoin_ja.ts  vcoin_ka.ts  vcoin_kk_KZ.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/src/: bleutrade.xcf
